--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "mongoose": "^7.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "randomstring": "^1.3.0"
