--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1",
     "process": "^0.11.10",
     "randomstring": "^1.3.0"
   }
